classDiagram
    Blackjack <|-- Deck
    Blackjack <|-- Money
    Blackjack <|-- Dealer
    Blackjack : +int currentMoney
    Blackjack : +string hand
    Blackjack : +bool bust
    Blackjack : +bool handResults
    Blackjack: +playGame()
    Blackjack: +bet()
    Blackjack: +hit()
    Blackjack: +stand()
    Blackjack: +cashOut()
    class Deck{
      +arrayList cards
      +shuffle()
      +cardCount()
    }
    class Money{
      -int currency
      -bool canBet
      -addMoney()
    }
    class Dealer{
      +bool canHit
      +forceHit()
      +forceStand()
    }